renamed `process` schema component into `processDescription`
