# s2gos/common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-06-22T13:37:08+00:00
+#   timestamp: 2025-06-22T18:08:57+00:00
 
 from __future__ import annotations
 
@@ -256,7 +256,7 @@ class ProcessList(BaseModel):
     links: list[Link]
 
 
-class Process(ProcessSummary):
+class ProcessDescription(ProcessSummary):
     inputs: Optional[dict[str, InputDescription]] = None
     outputs: Optional[dict[str, OutputDescription]] = None
 
