# s2gos/server/service.py
@@ -1,6 +1,6 @@
 # generated by gen_server.py:
 #   filename:  service.py:
-#   timestamp: 2025-06-22T15:37:15.394187
+#   timestamp: 2025-06-22T20:09:37.782003
 
 from abc import ABC, abstractmethod
 
@@ -11,7 +11,7 @@ from s2gos.common.models import (
     JobInfo,
     JobList,
     LandingPage,
-    Process,
+    ProcessDescription,
     ProcessList,
     ProcessRequest,
     Results,
@@ -20,39 +20,41 @@ from s2gos.common.models import (
 
 class Service(ABC):
     @abstractmethod
-    async def get_landing_page(self) -> LandingPage | JSONResponse:
+    async def get_landing_page(self) -> JSONResponse | LandingPage:
         pass
 
     @abstractmethod
-    async def get_conformance_classes(self) -> JSONResponse | ConfClasses:
+    async def get_conformance_classes(self) -> ConfClasses | JSONResponse:
         pass
 
     @abstractmethod
-    async def get_processes(self) -> ProcessList | JSONResponse:
+    async def get_processes(self) -> JSONResponse | ProcessList:
         pass
 
     @abstractmethod
-    async def get_process_description(self, process_id: str) -> Process | JSONResponse:
+    async def get_process_description(
+        self, process_id: str
+    ) -> JSONResponse | ProcessDescription:
         pass
 
     @abstractmethod
     async def execute(
         self, process_id: str, request: ProcessRequest
-    ) -> JobInfo | JSONResponse:
+    ) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def get_jobs(self) -> JobList | JSONResponse:
+    async def get_jobs(self) -> JSONResponse | JobList:
         pass
 
     @abstractmethod
-    async def get_status(self, job_id: str) -> JobInfo | JSONResponse:
+    async def get_status(self, job_id: str) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def dismiss(self, job_id: str) -> JobInfo | JSONResponse:
+    async def dismiss(self, job_id: str) -> JSONResponse | JobInfo:
         pass
 
     @abstractmethod
-    async def get_result(self, job_id: str) -> Results | JSONResponse:
+    async def get_result(self, job_id: str) -> JSONResponse | Results:
         pass
